load("@build_bazel_rules_ios//rules:framework.bzl", "apple_framework")

apple_framework(
    name = "YYText",
    srcs = glob([
        "YYText/**/*.h",
        "YYText/**/*.m",
    ]),
    platforms = {"ios": "12.0"},
    public_headers = glob(["YYText/**/*.h"]),
    sdk_frameworks = [
        "Accelerate",
        "CoreFoundation",
        "CoreText",
        "MobileCoreServices",
        "QuartzCore",
        "UIKit",
    ],
    visibility = ["//visibility:public"],
)
